[package]
name = "pyo3-gevent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyo3_gevent"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.18.1"
tokio = { version = "1.27.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "*"
